feat(zcash): initial commit - initial work on cw_zcash   - use single .db for everything zcash to speed up sync and scanning   - implement silent autoshielding of non-orchard funds   - use FFI for everything to fetch the data   - add support for passphrase by adding extra word to seed phrase   - enforce lints on CI for cw_zcash directory - use correct zcash name, and call transparent zcash tZEC - minor cleanups outsite of cw_zcash   - gitmodules, gitignore   - db debug   - fix broken addressPageType in WalletInfo   - enable debug options in kDebugMode and kProfileMode

--- a/.github/workflows/pr_test_build_linux.yml
+++ b/.github/workflows/pr_test_build_linux.yml
@@ -25,7 +25,7 @@ jobs:
 
     steps:
       - name: Fix github actions messing up $HOME...
-        run: 'echo HOME=/root | sudo tee -a $GITHUB_ENV'
+        run: "echo HOME=/root | sudo tee -a $GITHUB_ENV"
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.sha }}
@@ -108,7 +108,7 @@ jobs:
             wget https://github.com/MrCyjaneK/monero_c/releases/download/v0.18.4.0-RC9/release-bundle.zip
             unzip release-bundle.zip
             rm release-bundle.zip
-            unxz -fv release/*/*.xz 
+            unxz -fv release/*/*.xz
           popd
 
       - name: Build Bitbox Flutter
@@ -138,7 +138,11 @@ jobs:
       - name: Generate localization
         run: |
           dart run tool/generate_localization.dart
-
+      - name: Workaround zcash
+        run: |
+          mkdir -p scripts/zcash_lib/assets/
+          touch scripts/zcash_lib/assets/sapling-spend.params
+          touch scripts/zcash_lib/assets/sapling-output.params
       - name: Build linux
         run: |
           flutter build linux --dart-define=hasDevOptions=true --release
@@ -154,15 +158,18 @@ jobs:
         with:
           path: ${{ github.workspace }}/build/linux/x64/release/cakewallet_linux.zip
           name: cakewallet_linux
+      - name: Verify lint
+        run: |
+          exec env ABORT_ON_CHANGE=true ./scripts/lint.sh
 
       - name: Prepare virtual desktop
         if: ${{ contains(env.message, 'run tests') }}
         run: |
-            nohup Xvfb :99 -screen 0 720x1280x16 &
-            echo DISPLAY=:99 | sudo tee -a $GITHUB_ENV
-            dbus-daemon --system --fork
-            nohup NetworkManager &
-            nohup ffmpeg -framerate 60 -video_size 720x1280 -f x11grab -i :99 -c:v libx264 -c:a aac /opt/screen_grab.mkv &
+          nohup Xvfb :99 -screen 0 720x1280x16 &
+          echo DISPLAY=:99 | sudo tee -a $GITHUB_ENV
+          dbus-daemon --system --fork
+          nohup NetworkManager &
+          nohup ffmpeg -framerate 60 -video_size 720x1280 -f x11grab -i :99 -c:v libx264 -c:a aac /opt/screen_grab.mkv &
 
       # Note for people adding tests:
       # - Tests are ran on Linux, with some things being mocked out.
