--- a/.github/workflows/reusable-build.yml
+++ b/.github/workflows/reusable-build.yml
@@ -40,7 +40,7 @@ jobs:
 
     steps:
       - name: Fix github actions messing up $HOME...
-        run: 'echo HOME=/root | sudo tee -a $GITHUB_ENV'
+        run: "echo HOME=/root | sudo tee -a $GITHUB_ENV"
       - uses: actions/checkout@v4
         with:
           ref: ${{ inputs.ref }}
@@ -112,7 +112,7 @@ jobs:
             # cleaning
             rm -rf reown_flutter
             rm -f reown_flutter.tar.gz
-          
+
             wget https://github.com/cake-tech/reown_flutter/releases/download/v0.0.4/reown_flutter-v0.0.4.tar.gz -O reown_flutter.tar.gz
             mkdir reown_flutter
             pushd reown_flutter
@@ -135,7 +135,7 @@ jobs:
             wget https://github.com/MrCyjaneK/monero_c/releases/download/v0.18.4.0-RC9/release-bundle.zip
             unzip release-bundle.zip
             rm release-bundle.zip
-            unxz -fv release/*/*.xz 
+            unxz -fv release/*/*.xz
           popd
 
       - name: Build Bitbox Flutter
@@ -143,6 +143,12 @@ jobs:
           set -x -e
           pushd scripts
             ./build_bitbox_flutter.sh
+          popd
+      - name: Build Zcash Lib
+        run: |
+          set -x -e
+          pushd scripts/android
+            ./build_zcash.sh
           popd
 
       - name: Install Flutter dependencies
