--- a/cw_decred/pubspec.yaml
+++ b/cw_decred/pubspec.yaml
@@ -6,9 +6,8 @@ author: Cake Wallet
 homepage: https://cakewallet.com
 
 environment:
-  sdk: '>=3.2.0-0 <4.0.0'
+  sdk: ">=3.2.0-0 <4.0.0"
   flutter: ">=3.19.0"
-
 
 dependencies:
   flutter:
